@startuml database_schema
!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <u>x</u>
!define foreign_key(x) <i>x</i>

hide methods
hide stereotypes

' Dataset and Frame entities
table(dataset) {
  primary_key(id): INTEGER
  name: TEXT
  laser_count: INTEGER
  max_range: REAL
}

table(dataset_frame) {
  primary_key(id): INTEGER
  foreign_key(dataset_id): INTEGER
  relative_path: TEXT
}

table(dataset_laser_gt) {
  primary_key(id): INTEGER
  foreign_key(dataset_id): INTEGER
  laser_idx: INTEGER
  vertical_offset: REAL
  vertical_angle: REAL
  horizontal_offset: REAL
  horizontal_resolution: INTEGER
  horizontal_angle_offset: REAL
}

table(dataset_frame_gt) {
  primary_key(id): INTEGER
  foreign_key(dataset_frame_id): INTEGER
  points_count: INTEGER
  scanlines_count: INTEGER
}

table(dataset_frame_scanline_gt) {
  primary_key(id): INTEGER
  foreign_key(dataset_frame_id): INTEGER
  foreign_key(laser_id): INTEGER
  scanline_idx: INTEGER
  points_count: INTEGER
}

' Intrinsics experiment entities
table(intrinsics_experiment) {
  primary_key(id): INTEGER
  timestamp: TEXT
  label: TEXT
  description: TEXT
  commit_hash: TEXT
  use_hough_continuity: BOOLEAN
  use_scanline_conflict_solver: BOOLEAN
  use_vertical_heuristics: BOOLEAN
  use_horizontal_heuristics: BOOLEAN
}

table(intrinsics_frame_result) {
  primary_key(id): INTEGER
  foreign_key(experiment_id): INTEGER
  foreign_key(dataset_frame_id): INTEGER
  points_count: INTEGER
  scanlines_count: INTEGER
  vertical_iterations: INTEGER
  unassigned_points: INTEGER
  end_reason: TEXT
}

table(intrinsics_scanline_result) {
  primary_key(id): INTEGER
  foreign_key(intrinsics_result_id): INTEGER
  scanline_idx: INTEGER
  points_count: INTEGER
  vertical_offset: REAL
  vertical_angle: REAL
  ... (CI and uncertainty fields)
  horizontal_offset: REAL
  horizontal_resolution: INTEGER
  horizontal_angle_offset: REAL
}

' Range Image experiment entities
table(ri_experiment) {
  primary_key(id): INTEGER
  timestamp: TEXT
  label: TEXT
  description: TEXT
  commit_hash: TEXT
}

table(ri_frame_result) {
  primary_key(id): INTEGER
  foreign_key(experiment_id): INTEGER
  foreign_key(dataset_frame_id): INTEGER
  method: TEXT
  ri_width: INTEGER
  ri_height: INTEGER
  original_points_count: REAL
  reconstructed_points_count: REAL
  ... (MSE and RMSE metrics)
}

' Compression experiment entities
table(compression_experiment) {
  primary_key(id): INTEGER
  timestamp: TEXT
  label: TEXT
  description: TEXT
  commit_hash: TEXT
}

table(compression_frame_result) {
  primary_key(id): INTEGER
  foreign_key(experiment_id): INTEGER
  foreign_key(dataset_frame_id): INTEGER
  horizontal_step: REAL
  vertical_step: REAL
  tile_size: INTEGER
  error_threshold: REAL
  ... (compression metrics)
}

' Local Geometry experiment entities
table(local_geometry_experiment) {
  primary_key(id): INTEGER
  timestamp: TEXT
  label: TEXT
  description: TEXT
  commit_hash: TEXT
}

table(local_geometry_frame_result) {
  primary_key(id): INTEGER
  foreign_key(experiment_id): INTEGER
  foreign_key(dataset_frame_id): INTEGER
  method: TEXT
  ri_width: INTEGER
  ri_height: INTEGER
  original_points_count: INTEGER
  reconstructed_points_count: INTEGER
  k_neighbors: INTEGER
  runtime_seconds: REAL
  metrics_runtime_seconds: REAL
  ... (symmetric point-to-plane metrics)
}

' Relationships
dataset "1" -- "N" dataset_frame
dataset "1" -- "N" dataset_laser_gt
dataset_frame "1" -- "1" dataset_frame_gt
dataset_frame "1" -- "N" dataset_frame_scanline_gt
dataset_laser_gt "1" -- "N" dataset_frame_scanline_gt

intrinsics_experiment "1" -- "N" intrinsics_frame_result
dataset_frame "1" -- "N" intrinsics_frame_result
intrinsics_frame_result "1" -- "N" intrinsics_scanline_result

ri_experiment "1" -- "N" ri_frame_result
dataset_frame "1" -- "N" ri_frame_result

compression_experiment "1" -- "N" compression_frame_result
dataset_frame "1" -- "N" compression_frame_result

local_geometry_experiment "1" -- "N" local_geometry_frame_result
dataset_frame "1" -- "N" local_geometry_frame_result

@enduml
